--- a/client/public/css/styles-default-mobile.css
+++ b/client/public/css/styles-default-mobile.css
@@ -1,18 +1,19 @@
 :root{
     --main-font: 'Fredoka One', cursive;
     --secondary-font: 'Montserrat', sans-serif;
-    --softBackground: #fff;
+    --main-light-color: #fff;
     --tagBubble: #D0F2B3;
     --secondary: #87654D;
     --secondaryDark: #87654D;
     --secondaryLight: #CFB08D;
-    --greenDark: #116625;
+    --complementary-color: #283045;
     --removedTagBubble: rgb(203, 63, 40);
     --darkText: #000000;
 }
 body{
     font-family: var(--secondary-font);
-    background-color: var(--softBackground);
+    background-color: var(--main-light-color);
+    min-width: fit-content;
 }
 #root{
     max-width: 100vw;
@@ -31,7 +32,7 @@ h1, h2, h3, h4, h5, h6 {
 /* End of appwide classes */
 
 #navbar {
-    background: var(--softBackground);
+    background: var(--main-light-color);
     color: var(--darkText);
     border-bottom: 3px solid var(--secondaryDark);
     display: flex;
@@ -45,22 +46,6 @@ h1, h2, h3, h4, h5, h6 {
     font-family: var(--main-font);
     white-space: nowrap;
 }
-li > .log-in-btn {
-    background: var(--secondaryDark);
-    color: var(--softBackground);    
-}
-li > .log-in-btn:hover {
-    color: var(--secondaryDark)!important;
-    background: var(--softBackground);    
-}
-
-.sidenav > li > .log-in-btn {
-    background: var(--secondaryDark);
-    color: var(--softBackground);    
-}
-.sidenav-trigger > i {
-    background-color: #87654D;
-}
 #new-list {
     background: var(--secondary);
 }
@@ -71,12 +56,30 @@ li > .logout-btn {
     background-color: var(--secondaryDark);
 }
 li > .logout-btn:hover, .logout-btn:focus {
-    background: var(--softBackground);
+    background: var(--main-light-color);
     color: var(--secondaryDark);
 }
 
+/*SIDENAV STYLES START*/
+.sidenav-trigger > i {
+    background-color: #87654D;
+}
+.sidenav > li > div > a {
+    display: flex;
+    justify-content: center;
+}
+.sidenav > li > div > .brand-logo > img {
+    margin-right: .5rem;
+}
 .sidenav > a {
-    color: var(--softBackground);
+    color: var(--main-light-color);
+}
+.sidenav > li {
+    width: 80%;
+}
+.sidenav > li > a > img {
+    max-width:100%;
+    max-height:100%;
 }
 .exit-menu {
     position: absolute;
@@ -84,168 +87,9 @@ li > .logout-btn:hover, .logout-btn:focus {
     right: 1rem;
     font-size: 5rem!important;
 }
+/*SIDENAV STYLES END*/
 
-/* Neumorphism style classes start */
-.soft-outter{
-    -webkit-box-shadow: -6px -6px 26px 0px rgba(255,255,255,.5);
-    -moz-box-shadow: -6px -6px 26px 0px rgba(255,255,255,.5);
-    box-shadow: -6px -6px 16px 0px rgba(255,255,255,.5);
-    border-radius: 12px;
-    padding: 0px!important;
-}
-.soft-inner{
-    -webkit-box-shadow: 6px 6px 16px 0px rgba(209,205,199,0.5)!important;
-    -moz-box-shadow: 6px 6px 16px 0px rgba(209,205,199,0.5)!important;
-    box-shadow: 6px 6px 16px 0px rgba(209,205,199,0.5)!important;
-    border-radius: 12px;
-    background-color: var(--softBackground);
-    width: 100%!important;
-    height: 100%;
-    border-style: initial;
-}
-.soft-background{
-    background-color: var(--softBackground);
-}
-.soft-inset-outter{
-    -webkit-box-shadow: inset 6px 6px 16px 0px rgba(0,0,0,.5);
-    -moz-box-shadow: inset 6px 6px 16px 0px rgba(0,0,0,.5);
-    box-shadow: inset 6px 6px 16px 0px rgba(0,0,0,.5);
-}
-.soft-inset-inner{
-    -webkit-box-shadow: inset -6px -6px 16px 0px rgba(255,255,255,0.5);
-    -moz-box-shadow: inset -6px -6px 16px 0px rgba(255,255,255,0.5);
-    box-shadow: inset -6px -6px 16px 0px rgba(255,255,255,0.5);
-}
-.max-width{
-    width: 100%;
-}
-.flex-right{
-    display: flex;
-    justify-content: flex-end;
-}
-/* Neumorphism style classes end */
-
-/* Tag bubbles styles start */
-.tag-bubble{
-    padding:3px 6px;
-    border-radius:12px;
-    background:var(--tagBubble);
-}
-.tag-bubble-wrap{
-    display:inline-block;
-    margin-right:2px;
-    flex-wrap:wrap;
-    align-items:center;
-    justify-content:space-evenly;
-    border-radius:12px;
-    padding:2px 3px;
-    margin:1px 2px;
-    width:fit-content;
-}
-/* Tag bubbles styles end */
-
-/* Form Wizard Styles start */
-.card-checkbox{
-    display: flex;
-}
-.card-checkbox > span {
-    display: flex!important;
-    font-size: 1.3rem!important;
-    height: 9rem!important;
-    align-items: center;
-    text-align: center;
-}
-[type="checkbox"]+span:not(.lever):before, [type="checkbox"]:not(.filled-in)+span:not(.lever):after{
-    top: auto!important;
-    width: 30px!important;
-    height: 30px!important;
-}
-[type="checkbox"]:checked+span:not(.lever):before{
-    top: auto!important;
-    width: 16px!important;
-    height: 37px!important;
-}
-[type="checkbox"]:checked+span:not(.lever):before {
-    border-right: 2px solid var(--secondary)!important;
-    border-bottom: 2px solid var(--secondary)!important;
-
-}
-.btn-soft {
-    color: #d50000;
-}
-button:focus{
-    -webkit-box-shadow: inset -6px -6px 16px 0px rgba(255,255,255,0.5);
-    -moz-box-shadow: inset -6px -6px 16px 0px rgba(255,255,255,0.5);
-    box-shadow: inset -6px -6px 16px 0px rgba(255,255,255,0.5);
-    border-width: 3px 0px 0px 3px;
-    border-color: rgba(0,0,0,.5);
-    border-style: inset;
-    background: var(--secondary) !important;
-    color: var(--softBackground)!important;
-}
-
-li > .dash-btn:hover, .dash-btn:focus{
-    background: var(--secondaryDark) !important;
-}
-
-.page-2-btn {
-    display:flex;
-    align-items:center;
-    justify-content:space-evenly;
-    font-size: 6rem;
-}
-.page-2-btn > i {
-    width: 75%;
-}
-input{
-    font-size: 3rem!important;
-    height: 5rem!important;
-    border-radius: 20px!important;
-    background-color: #FCFAFB!important;
-
-}
-input:focus{
-    border-bottom: 1px solid var(--secondaryLight)!important;
-    box-shadow: 0 1px 0 0 var(--secondaryLight)!important;
-}
-#content-copy {
-    color: var(--secondaryDark)
-}
-#content-copy:focus,#content-copy:hover{
-    color:var(--secondaryLight);
-}
-
-/* Form Wizard Styles End */
-
-/* Taglist list styles start */
-.divider{
-    padding:1.5px;
-    background:#000000;
-    border-radius:20px;
-}
-/* Taglist list styles end */
-
-.accordion-toggle {
-    text-decoration: none;
-    padding: .5rem;
-    font-size: 2.5rem;
-    background: var(--secondaryDark);
-    color: var(--softBackground);
-}
-#copyright {
-    width: 100%;
-}
-
-.mobile-ad {
-    display: flex;
-}
-.desktop-ad {
-    display: none;
-}
-
-
-
-/* LANDING PAGE */
+/* LANDING PAGE STARTS*/
 #landing-list {
     width: 100%;
     height: 100vh;
@@ -266,3 +110,18 @@ input:focus{
     margin-bottom: 1.5rem;
     padding: 1rem;
 }
+.landing-pitch {
+    width: fit-content;
+    display: flex;
+    text-align: center;
+    color: var(--main-light-color);
+    background-color: var(--complementary-color);
+    padding: 1rem 6rem;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.landing-pitch > h1, .landing-pitch > h2, .landing-pitch > h3 {
+    margin: 3px;
+}
+/*LANDING PAGE ENDS*/
