Change style of form blocks

--- a/client/public/css/styles-default-mobile.css
+++ b/client/public/css/styles-default-mobile.css
@@ -160,5 +160,11 @@ li > .logout-btn:hover, .logout-btn:focus {
     align-items: center;
     justify-content: space-evenly;
 }
+.stool-form-question {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+}
 
 /*Form end*/
