--- a/client/public/css/styles-default-mobile.css
+++ b/client/public/css/styles-default-mobile.css
@@ -12,7 +12,7 @@
 }
 body{
     font-family: var(--secondary-font);
-    background-color: var(--main-light-color);
+    background-color: var(--secondaryLight);
     min-width: fit-content;
 }
 #root{
@@ -159,12 +159,18 @@ li > .logout-btn:hover, .logout-btn:focus {
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+    height: '100%';
+    padding: '2rem';    
+    background-color: var(--main-light-color);
 }
 .stool-form-question {
     display: flex;
     flex-direction: column;
     align-items: start;
     justify-content: center;
+}
+.form-arrow {
+    font-size: 5rem;
 }
 input:not([type]), input[type=text]:not(.browser-default), input[type=password]:not(.browser-default), input[type=email]:not(.browser-default), input[type=url]:not(.browser-default), input[type=time]:not(.browser-default), input[type=date]:not(.browser-default), input[type=datetime]:not(.browser-default), input[type=datetime-local]:not(.browser-default), input[type=tel]:not(.browser-default), input[type=number]:not(.browser-default), input[type=search]:not(.browser-default), textarea.materialize-textarea {
     border-bottom: 0px !important;
