--- a/client/public/css/styles-default-mobile.css
+++ b/client/public/css/styles-default-mobile.css
@@ -29,6 +29,11 @@ h1, h2, h3, h4, h5, h6 {
     align-items: center;
     justify-content: center;
 }
+.flex-link{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 /* End of appwide classes */
 
 #navbar {
@@ -171,6 +176,20 @@ li > .logout-btn:hover, .logout-btn:focus {
 }
 .form-arrow {
     font-size: 5rem;
+}
+.stool-form-btn.link{
+    background-color: var(--main-light-color);
+    border-radius: 50px;
+    border: 2px solid var(--secondary);
+    padding: .25rem;
+}
+.stool-form-btn-icon.link {
+    color: var(--secondary);
+}
+.stool-form-btn:not(.link), .stool-form-btn-icon:not(.link){
+    background-color: var(--secondary);
+    color: var(--main-light-color);
+    border-radius: 50px;
 }
 input:not([type]), input[type=text]:not(.browser-default), input[type=password]:not(.browser-default), input[type=email]:not(.browser-default), input[type=url]:not(.browser-default), input[type=time]:not(.browser-default), input[type=date]:not(.browser-default), input[type=datetime]:not(.browser-default), input[type=datetime-local]:not(.browser-default), input[type=tel]:not(.browser-default), input[type=number]:not(.browser-default), input[type=search]:not(.browser-default), textarea.materialize-textarea {
     border-bottom: 0px !important;
