--- a/client/public/css/styles-default-mobile.css
+++ b/client/public/css/styles-default-mobile.css
@@ -11,9 +11,11 @@
     --darkText: #000000;
 }
 body{
-    font-family: var(--secondary-font);
-    background-color: var(--secondaryLight);
-    min-width: fit-content;
+    /* font-family: var(--secondary-font);
+    background-color: var(--secondaryLight); */
+    overflow-y: scroll; /* has to be scroll, not auto */
+    -webkit-overflow-scrolling: touch;
+  }
 }
 #root{
     max-width: 100vw;
