--- a/client/public/css/styles-default-mobile.css
+++ b/client/public/css/styles-default-mobile.css
@@ -17,6 +17,9 @@ body{
     -webkit-overflow-scrolling: touch;
   }
 }
+* {
+    border: 1px solid #000;
+}
 #root{
     max-width: 100vw;
     overflow-x: hidden;
